# connectedhomeip

./: serial_client.py
examples/chip-tool/: BUILD.gn  args.gni
examples/chip-tool/chip_protos/: test_service.proto
examples/chip-tool/pw_sys_io/: BUILD.gn  pw_sys_io_chiptool.cc
examples/chip-tool/pw_sys_io/include/: init.h
examples/lighting-app/nrf5/: Makefile
examples/lighting-app/nrf5/main/: main.cpp
examples/lighting-app/nrf5/main/include/: app_config.h
src/android/CHIPTool/app/src/main/java/com/google/chip/chiptool/commissioner/: CommissionerActivity.java
src/android/CHIPTool/app/src/main/java/com/google/chip/chiptool/commissioner/thread/: ThreadNetworkInfo.java
src/android/CHIPTool/app/src/main/java/com/google/chip/chiptool/commissioner/thread/internal/: BorderAgentDiscoverer.java  CommissioningFragment.java  InputNetworkPasswordDialogFragment.java  NetworkCredentialFetcher.java  SelectNetworkFragment.java  ThreadCommissionerServiceImpl.java
src/controller/python/: chip-device-ctrl.py
src/controller/python/chip/: ChipBluezMgr.py
