
import("//build_overrides/chip.gni")
import("//build_overrides/pigweed.gni")
import("$dir_pw_build/target_types.gni")

config("default_config") {
  include_dirs = [ "//pw_sys_io/include" ]
}

pw_source_set("pw_sys_io_chiptool") {
  public_configs = [ ":default_config" ]
  deps = [
    "${chip_root}/third_party/pigweed/repo/pw_sys_io:default_putget_bytes",
    "${chip_root}/third_party/pigweed/repo/pw_sys_io:facade",
  ]
  sources = [ "//pw_sys_io/pw_sys_io_chiptool.cc" ]
}